# MdCS2026

./: .gitignore  gauss.py  introduction.py  matrices.py  matrix.py  vectors.py  vectors2.py
vector_shower/: __init__.py  vector_shower
vector_shower/src/: CMakeLists.txt  ObjectsRepository2D.cpp  ObjectsRepository2D.h  StdinCommandListener.cpp  StdinCommandListener.h  main.cpp  vector_shower.py  vectorview2d.cpp  vectorview2d.h
